--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,7 +32,7 @@ jobs:
         context: ./
         file: ./Dockerfile
         push: true
-        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/devcontainer-base-zephyr:latest
+        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/devcontainer-base-zephyr:${{ GITHUB_REF_NAME }}
 
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
