--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,9 @@ name: CI to Docker Hub
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, focal ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, focal ]
 
 jobs:
 
